--- a/package.json
+++ b/package.json
@@ -12,38 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.2",
+    "@angular/animations": "^5.2.10",
+    "@angular/cdk": "^5.2.5",
+    "@angular/cli": "1.6.6",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/router": "^5.2.10",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "angular-2-data-table": "^0.1.2",
     "angular-4-data-table": "^0.4.6",
     "angular-4-data-table-fix": "^0.1.2",
     "angularfire2": "^5.0.0-rc.5-next",
-    "bootstrap": "^4.0.0",
-    "core-js": "^2.4.1",
-    "firebase": "^4.11.0",
+    "bootstrap": "^4.1.0",
+    "core-js": "^2.5.5",
+    "firebase": "^4.12.1",
     "ng2-validation": "^4.2.0",
-    "rxjs": "^5.5.7",
-    "zone.js": "^0.8.19",
-    "@angular/cli": "1.6.6",
-    "@angular/compiler-cli": "^5.2.9"
+    "rxjs": "^5.5.10",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "1.6.6",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/language-service": "^5.2.10",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.102",
+    "@types/node": "^6.0.106",
     "codelyzer": "^4.2.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
